; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_vo_sdl.c_draw_osd_part.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_vo_sdl.c_draw_osd_part.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vo = type { %struct.priv* }
%struct.priv = type { i32, %struct.osd_bitmap_surface* }
%struct.osd_bitmap_surface = type { i32, %struct.osd_target* }
%struct.osd_target = type { i32, i32, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vo*, i32)* @draw_osd_part to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @draw_osd_part(%struct.vo* %0, i32 %1) #0 {
  %3 = alloca %struct.vo*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.priv*, align 8
  %6 = alloca %struct.osd_bitmap_surface*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.osd_target*, align 8
  store %struct.vo* %0, %struct.vo** %3, align 8
  store i32 %1, i32* %4, align 4
  %9 = load %struct.vo*, %struct.vo** %3, align 8
  %10 = getelementptr inbounds %struct.vo, %struct.vo* %9, i32 0, i32 0
  %11 = load %struct.priv*, %struct.priv** %10, align 8
  store %struct.priv* %11, %struct.priv** %5, align 8
  %12 = load %struct.priv*, %struct.priv** %5, align 8
  %13 = getelementptr inbounds %struct.priv, %struct.priv* %12, i32 0, i32 1
  %14 = load %struct.osd_bitmap_surface*, %struct.osd_bitmap_surface** %13, align 8
  %15 = load i32, i32* %4, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds %struct.osd_bitmap_surface, %struct.osd_bitmap_surface* %14, i64 %16
  store %struct.osd_bitmap_surface* %17, %struct.osd_bitmap_surface** %6, align 8
  store i32 0, i32* %7, align 4
  br label %18

18:                                               ; preds = %65, %2
  %19 = load i32, i32* %7, align 4
  %20 = load %struct.osd_bitmap_surface*, %struct.osd_bitmap_surface** %6, align 8
  %21 = getelementptr inbounds %struct.osd_bitmap_surface, %struct.osd_bitmap_surface* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 8
  %23 = icmp slt i32 %19, %22
  br i1 %23, label %24, label %68

24:                                               ; preds = %18
  %25 = load %struct.osd_bitmap_surface*, %struct.osd_bitmap_surface** %6, align 8
  %26 = getelementptr inbounds %struct.osd_bitmap_surface, %struct.osd_bitmap_surface* %25, i32 0, i32 1
  %27 = load %struct.osd_target*, %struct.osd_target** %26, align 8
  %28 = load i32, i32* %7, align 4
  %29 = sext i32 %28 to i64
  %30 = getelementptr inbounds %struct.osd_target, %struct.osd_target* %27, i64 %29
  store %struct.osd_target* %30, %struct.osd_target** %8, align 8
  %31 = load %struct.osd_target*, %struct.osd_target** %8, align 8
  %32 = getelementptr inbounds %struct.osd_target, %struct.osd_target* %31, i32 0, i32 3
  %33 = load i64, i64* %32, align 8
  %34 = icmp ne i64 %33, 0
  br i1 %34, label %35, label %47

35:                                               ; preds = %24
  %36 = load %struct.priv*, %struct.priv** %5, align 8
  %37 = getelementptr inbounds %struct.priv, %struct.priv* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 8
  %39 = load %struct.osd_target*, %struct.osd_target** %8, align 8
  %40 = getelementptr inbounds %struct.osd_target, %struct.osd_target* %39, i32 0, i32 3
  %41 = load i64, i64* %40, align 8
  %42 = load %struct.osd_target*, %struct.osd_target** %8, align 8
  %43 = getelementptr inbounds %struct.osd_target, %struct.osd_target* %42, i32 0, i32 1
  %44 = load %struct.osd_target*, %struct.osd_target** %8, align 8
  %45 = getelementptr inbounds %struct.osd_target, %struct.osd_target* %44, i32 0, i32 0
  %46 = call i32 @SDL_RenderCopy(i32 %38, i64 %41, i32* %43, i32* %45)
  br label %47

47:                                               ; preds = %35, %24
  %48 = load %struct.osd_target*, %struct.osd_target** %8, align 8
  %49 = getelementptr inbounds %struct.osd_target, %struct.osd_target* %48, i32 0, i32 2
  %50 = load i64, i64* %49, align 8
  %51 = icmp ne i64 %50, 0
  br i1 %51, label %52, label %64

52:                                               ; preds = %47
  %53 = load %struct.priv*, %struct.priv** %5, align 8
  %54 = getelementptr inbounds %struct.priv, %struct.priv* %53, i32 0, i32 0
  %55 = load i32, i32* %54, align 8
  %56 = load %struct.osd_target*, %struct.osd_target** %8, align 8
  %57 = getelementptr inbounds %struct.osd_target, %struct.osd_target* %56, i32 0, i32 2
  %58 = load i64, i64* %57, align 8
  %59 = load %struct.osd_target*, %struct.osd_target** %8, align 8
  %60 = getelementptr inbounds %struct.osd_target, %struct.osd_target* %59, i32 0, i32 1
  %61 = load %struct.osd_target*, %struct.osd_target** %8, align 8
  %62 = getelementptr inbounds %struct.osd_target, %struct.osd_target* %61, i32 0, i32 0
  %63 = call i32 @SDL_RenderCopy(i32 %55, i64 %58, i32* %60, i32* %62)
  br label %64

64:                                               ; preds = %52, %47
  br label %65

65:                                               ; preds = %64
  %66 = load i32, i32* %7, align 4
  %67 = add nsw i32 %66, 1
  store i32 %67, i32* %7, align 4
  br label %18

68:                                               ; preds = %18
  ret void
}

declare dso_local i32 @SDL_RenderCopy(i32, i64, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
